google form linked

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<img src="images/bus.png" width="120px" height="70px"></img>
+				<i class = "icon fa-motorcycle"></i>
+				<!--<img src="images/bus.png" width="120px" height="70px"></img>-->
 				<h2>Trippy Travels</h2>
 				<p>Lets trip together</p>
 				<ul class="actions">
@@ -141,7 +142,7 @@
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-facebook">
+						<li><a href="https://www.facebook.com/Travel-1676583712593179/" class="icon fa-facebook">
 							<span class="label">Facebook</span>
 						</a></li>
 						<li><a href="#" class="icon fa-twitter">
