ravish ne bola wo button nikala, sab pics k niche wala

--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
 					<article class="feature left">
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 						<div class="content">
-							<h2>We look forward to serve semi urban areas with e commerce</h2>
-							<p>E-commerce is for everybody in India, we bring services for rural and semi-urban areas</p>
+							<h2>Why trippy ?</h2>
+							<p>Your only worry is to decide how much fun to have. We take care of the rest.
+							</p>
 							<ul class="actions">
 								<li>
 									<a href="#" class="button alt">More</a>
@@ -85,9 +86,9 @@
 						<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
 						<a href="#" class="image"><img src="images/pic10.jpg" alt="" /></a>
 					</div>
-					<ul class="actions">
+					<!-- <ul class="actions">
 						<li><a href="#" class="button big alt">Tempus Aliquam</a></li>
-					</ul>
+					</ul> -->
 				</div>
 			</section>
 
