some content added

--- a/himachal.html
+++ b/himachal.html
@@ -36,9 +36,12 @@
 					</header>
 
 					<a href="#" class="image fit"><img src="images/himachal.jpg" alt="" /></a>
-					<p>1</p>
-					<p>2</p>
-					<p>3</p>
+					<p>Me with my 10 best friends decided to visit himachal in Feb,2015.When we started looking for travel websites to get an idea of the budget and the places that we might wanna go, we found out that the budget was above par,one of my friend,told me about trippy travels.So I gave them a call and that is probably one of the better decisions I have made in my life
+						</p>
+					<p>The people from Trippy Travels were so friendly and they knew exactly what we needed.We visited Kasol, Magic Rashol (you wouldn't wanna miss this place), Katagla, Manali and Dharamshala in the 10 days. The places we lived were not exactly 3 star hotels but who needs 3 stars when you can have a million stars.I strongly recommend all to conuslt Trippy Travels before planning any vacation
+						</p>
+					<p>Food,Travel,Accomodation,Friends - Trippy Travels is a full package!
+						</p>
 
 				</div>
 			</section>
