--- a/malshej.html
+++ b/malshej.html
@@ -36,10 +36,10 @@
 					</header>
 
 					<a href="#" class="image fit"><img src="images/malshej-min.jpg" alt="" /></a>
-					<p>1</p>
-					<p>2</p>
-					<p>3</p>
-
+					<p>On my 22<sup>nd</sup> birthday, I wanted to do somthing other than the regular booze and smoke, so i decided for an overnight camp in the wild but I did'nt have any experience clearly</p>
+					<p>While finding out about it more on the internet, I came across this very website and just contacted them as it did'nt cost money.</p>
+					<p>I knew this kind of customisation in plan would be wierd for any travel agency. But to my suprise these guys realised my plan and implemented it too.</p>
+					<p>They not only planned the trip, arranged the camping gear our travelling, contacted a local to guide us... they were obsessed as if it was their birthday!.
 				</div>
 			</section>
 
